parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> { instructions }
Rule 5     instruction -> non_end_instruction
Rule 6     instruction -> end_line_instruction
Rule 7     end_line_instruction -> RETURN expression ;
Rule 8     end_line_instruction -> print_stmt
Rule 9     end_line_instruction -> CONTINUE ;
Rule 10    end_line_instruction -> BREAK ;
Rule 11    end_line_instruction -> assignment
Rule 12    end_line_instruction -> ;
Rule 13    non_end_instruction -> while_loop
Rule 14    non_end_instruction -> for_loop
Rule 15    non_end_instruction -> if_statement
Rule 16    assignment -> ID DIVASSIGN expression ;
Rule 17    assignment -> ID MULASSIGN expression ;
Rule 18    assignment -> ID SUBASSIGN expression ;
Rule 19    assignment -> ID ADDASSIGN expression ;
Rule 20    assignment -> ID ASSIGN expression ;
Rule 21    factor -> expression_transpose TRANSPOSE  [precedence=right, level=9]
Rule 22    factor -> matrix_function
Rule 23    factor -> [ value_list ]
Rule 24    factor -> ( expression )
Rule 25    factor -> STRING
Rule 26    factor -> ID
Rule 27    factor -> NUMBER
Rule 28    expression_bin -> expression NEQ expression  [precedence=left, level=3]
Rule 29    expression_bin -> expression EQ expression  [precedence=left, level=3]
Rule 30    expression_bin -> expression LE expression  [precedence=left, level=3]
Rule 31    expression_bin -> expression GE expression  [precedence=left, level=3]
Rule 32    expression_bin -> expression LT expression  [precedence=left, level=3]
Rule 33    expression_bin -> expression GT expression  [precedence=left, level=3]
Rule 34    expression_bin -> expression DOTDIV expression  [precedence=left, level=7]
Rule 35    expression_bin -> expression DOTMUL expression  [precedence=left, level=7]
Rule 36    expression_bin -> expression DIVIDE expression  [precedence=left, level=6]
Rule 37    expression_bin -> expression TIMES expression  [precedence=left, level=6]
Rule 38    expression_bin -> expression DOTSUB expression  [precedence=left, level=5]
Rule 39    expression_bin -> expression DOTADD expression  [precedence=left, level=5]
Rule 40    expression_bin -> expression MINUS expression  [precedence=left, level=4]
Rule 41    expression_bin -> expression PLUS expression  [precedence=left, level=4]
Rule 42    expression_negate -> expression  [precedence=right, level=8]
Rule 43    expression_transpose -> factor  [precedence=right, level=9]
Rule 44    matrix_function -> EYE ( expression )
Rule 45    matrix_function -> ONES ( expression )
Rule 46    matrix_function -> ZEROS ( expression )
Rule 47    expression -> factor
Rule 48    expression -> expression_bin
Rule 49    expression -> MINUS expression_negate  [precedence=left, level=4]
Rule 50    value_list -> expression
Rule 51    value_list -> value_list , expression
Rule 52    if_statement -> IF ( expression ) instruction ELSE  [precedence=nonassoc, level=2]
Rule 53    if_statement -> IF ( expression ) instruction  [precedence=nonassoc, level=1]
Rule 54    for_loop -> FOR ID ASSIGN expression RANGE expression instruction
Rule 55    while_loop -> WHILE ( expression ) instruction
Rule 56    print_stmt -> PRINT value_list ;
Rule 57    NUMBER -> FLOATNUM
Rule 58    NUMBER -> INTNUM

Terminals, with rules where they appear:

(                    : 24 44 45 46 52 53 55
)                    : 24 44 45 46 52 53 55
,                    : 51
;                    : 7 9 10 12 16 17 18 19 20 56
ADDASSIGN            : 19
ASSIGN               : 20 54
BREAK                : 10
CONTINUE             : 9
DIVASSIGN            : 16
DIVIDE               : 36
DOTADD               : 39
DOTDIV               : 34
DOTMUL               : 35
DOTSUB               : 38
ELSE                 : 52
EQ                   : 29
EYE                  : 44
FLOATNUM             : 57
FOR                  : 54
GE                   : 31
GT                   : 33
ID                   : 16 17 18 19 20 26 54
IF                   : 52 53
INTNUM               : 58
LE                   : 30
LT                   : 32
MINUS                : 40 49
MULASSIGN            : 17
NEQ                  : 28
ONES                 : 45
PLUS                 : 41
PRINT                : 56
RANGE                : 54
RETURN               : 7
STRING               : 25
SUBASSIGN            : 18
TIMES                : 37
TRANSPOSE            : 21
WHILE                : 55
ZEROS                : 46
[                    : 23
]                    : 23
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear:

NUMBER               : 27
assignment           : 11
end_line_instruction : 6
expression           : 7 16 17 18 19 20 24 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 44 45 46 50 51 52 53 54 54 55
expression_bin       : 48
expression_negate    : 49
expression_transpose : 21
factor               : 43 47
for_loop             : 14
if_statement         : 15
instruction          : 2 3 52 53 54 55
instructions         : 1 2 4
matrix_function      : 22
non_end_instruction  : 5
print_stmt           : 8
program              : 0
value_list           : 23 51 56
while_loop           : 13


state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . non_end_instruction
    (6) instruction -> . end_line_instruction
    (13) non_end_instruction -> . while_loop
    (14) non_end_instruction -> . for_loop
    (15) non_end_instruction -> . if_statement
    (7) end_line_instruction -> . RETURN expression ;
    (8) end_line_instruction -> . print_stmt
    (9) end_line_instruction -> . CONTINUE ;
    (10) end_line_instruction -> . BREAK ;
    (11) end_line_instruction -> . assignment
    (12) end_line_instruction -> . ;
    (55) while_loop -> . WHILE ( expression ) instruction
    (54) for_loop -> . FOR ID ASSIGN expression RANGE expression instruction
    (52) if_statement -> . IF ( expression ) instruction ELSE
    (53) if_statement -> . IF ( expression ) instruction
    (56) print_stmt -> . PRINT value_list ;
    (16) assignment -> . ID DIVASSIGN expression ;
    (17) assignment -> . ID MULASSIGN expression ;
    (18) assignment -> . ID SUBASSIGN expression ;
    (19) assignment -> . ID ADDASSIGN expression ;
    (20) assignment -> . ID ASSIGN expression ;
    {               shift and go to state 4
    RETURN          shift and go to state 10
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ;               shift and go to state 11
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    IF              shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    non_end_instruction            shift and go to state 5
    end_line_instruction           shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8
    if_statement                   shift and go to state 9
    print_stmt                     shift and go to state 12
    assignment                     shift and go to state 15

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . non_end_instruction
    (6) instruction -> . end_line_instruction
    (13) non_end_instruction -> . while_loop
    (14) non_end_instruction -> . for_loop
    (15) non_end_instruction -> . if_statement
    (7) end_line_instruction -> . RETURN expression ;
    (8) end_line_instruction -> . print_stmt
    (9) end_line_instruction -> . CONTINUE ;
    (10) end_line_instruction -> . BREAK ;
    (11) end_line_instruction -> . assignment
    (12) end_line_instruction -> . ;
    (55) while_loop -> . WHILE ( expression ) instruction
    (54) for_loop -> . FOR ID ASSIGN expression RANGE expression instruction
    (52) if_statement -> . IF ( expression ) instruction ELSE
    (53) if_statement -> . IF ( expression ) instruction
    (56) print_stmt -> . PRINT value_list ;
    (16) assignment -> . ID DIVASSIGN expression ;
    (17) assignment -> . ID MULASSIGN expression ;
    (18) assignment -> . ID SUBASSIGN expression ;
    (19) assignment -> . ID ADDASSIGN expression ;
    (20) assignment -> . ID ASSIGN expression ;
    $end            reduce using rule 1 (program -> instructions .)
    {               shift and go to state 4
    RETURN          shift and go to state 10
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ;               shift and go to state 11
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    IF              shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 21
    non_end_instruction            shift and go to state 5
    end_line_instruction           shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8
    if_statement                   shift and go to state 9
    print_stmt                     shift and go to state 12
    assignment                     shift and go to state 15

state 3

    (3) instructions -> instruction .
    {               reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    ;               reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . non_end_instruction
    (6) instruction -> . end_line_instruction
    (13) non_end_instruction -> . while_loop
    (14) non_end_instruction -> . for_loop
    (15) non_end_instruction -> . if_statement
    (7) end_line_instruction -> . RETURN expression ;
    (8) end_line_instruction -> . print_stmt
    (9) end_line_instruction -> . CONTINUE ;
    (10) end_line_instruction -> . BREAK ;
    (11) end_line_instruction -> . assignment
    (12) end_line_instruction -> . ;
    (55) while_loop -> . WHILE ( expression ) instruction
    (54) for_loop -> . FOR ID ASSIGN expression RANGE expression instruction
    (52) if_statement -> . IF ( expression ) instruction ELSE
    (53) if_statement -> . IF ( expression ) instruction
    (56) print_stmt -> . PRINT value_list ;
    (16) assignment -> . ID DIVASSIGN expression ;
    (17) assignment -> . ID MULASSIGN expression ;
    (18) assignment -> . ID SUBASSIGN expression ;
    (19) assignment -> . ID ADDASSIGN expression ;
    (20) assignment -> . ID ASSIGN expression ;
    {               shift and go to state 4
    RETURN          shift and go to state 10
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ;               shift and go to state 11
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    IF              shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 18

    instructions                   shift and go to state 22
    instruction                    shift and go to state 3
    non_end_instruction            shift and go to state 5
    end_line_instruction           shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8
    if_statement                   shift and go to state 9
    print_stmt                     shift and go to state 12
    assignment                     shift and go to state 15

state 5

    (5) instruction -> non_end_instruction .
    {               reduce using rule 5 (instruction -> non_end_instruction .)
    RETURN          reduce using rule 5 (instruction -> non_end_instruction .)
    CONTINUE        reduce using rule 5 (instruction -> non_end_instruction .)
    BREAK           reduce using rule 5 (instruction -> non_end_instruction .)
    ;               reduce using rule 5 (instruction -> non_end_instruction .)
    WHILE           reduce using rule 5 (instruction -> non_end_instruction .)
    FOR             reduce using rule 5 (instruction -> non_end_instruction .)
    IF              reduce using rule 5 (instruction -> non_end_instruction .)
    PRINT           reduce using rule 5 (instruction -> non_end_instruction .)
    ID              reduce using rule 5 (instruction -> non_end_instruction .)
    $end            reduce using rule 5 (instruction -> non_end_instruction .)
    }               reduce using rule 5 (instruction -> non_end_instruction .)
    ELSE            reduce using rule 5 (instruction -> non_end_instruction .)


state 6

    (6) instruction -> end_line_instruction .
    {               reduce using rule 6 (instruction -> end_line_instruction .)
    RETURN          reduce using rule 6 (instruction -> end_line_instruction .)
    CONTINUE        reduce using rule 6 (instruction -> end_line_instruction .)
    BREAK           reduce using rule 6 (instruction -> end_line_instruction .)
    ;               reduce using rule 6 (instruction -> end_line_instruction .)
    WHILE           reduce using rule 6 (instruction -> end_line_instruction .)
    FOR             reduce using rule 6 (instruction -> end_line_instruction .)
    IF              reduce using rule 6 (instruction -> end_line_instruction .)
    PRINT           reduce using rule 6 (instruction -> end_line_instruction .)
    ID              reduce using rule 6 (instruction -> end_line_instruction .)
    $end            reduce using rule 6 (instruction -> end_line_instruction .)
    }               reduce using rule 6 (instruction -> end_line_instruction .)
    ELSE            reduce using rule 6 (instruction -> end_line_instruction .)


state 7

    (13) non_end_instruction -> while_loop .
    {               reduce using rule 13 (non_end_instruction -> while_loop .)
    RETURN          reduce using rule 13 (non_end_instruction -> while_loop .)
    CONTINUE        reduce using rule 13 (non_end_instruction -> while_loop .)
    BREAK           reduce using rule 13 (non_end_instruction -> while_loop .)
    ;               reduce using rule 13 (non_end_instruction -> while_loop .)
    WHILE           reduce using rule 13 (non_end_instruction -> while_loop .)
    FOR             reduce using rule 13 (non_end_instruction -> while_loop .)
    IF              reduce using rule 13 (non_end_instruction -> while_loop .)
    PRINT           reduce using rule 13 (non_end_instruction -> while_loop .)
    ID              reduce using rule 13 (non_end_instruction -> while_loop .)
    $end            reduce using rule 13 (non_end_instruction -> while_loop .)
    }               reduce using rule 13 (non_end_instruction -> while_loop .)
    ELSE            reduce using rule 13 (non_end_instruction -> while_loop .)


state 8

    (14) non_end_instruction -> for_loop .
    {               reduce using rule 14 (non_end_instruction -> for_loop .)
    RETURN          reduce using rule 14 (non_end_instruction -> for_loop .)
    CONTINUE        reduce using rule 14 (non_end_instruction -> for_loop .)
    BREAK           reduce using rule 14 (non_end_instruction -> for_loop .)
    ;               reduce using rule 14 (non_end_instruction -> for_loop .)
    WHILE           reduce using rule 14 (non_end_instruction -> for_loop .)
    FOR             reduce using rule 14 (non_end_instruction -> for_loop .)
    IF              reduce using rule 14 (non_end_instruction -> for_loop .)
    PRINT           reduce using rule 14 (non_end_instruction -> for_loop .)
    ID              reduce using rule 14 (non_end_instruction -> for_loop .)
    $end            reduce using rule 14 (non_end_instruction -> for_loop .)
    }               reduce using rule 14 (non_end_instruction -> for_loop .)
    ELSE            reduce using rule 14 (non_end_instruction -> for_loop .)


state 9

    (15) non_end_instruction -> if_statement .
    {               reduce using rule 15 (non_end_instruction -> if_statement .)
    RETURN          reduce using rule 15 (non_end_instruction -> if_statement .)
    CONTINUE        reduce using rule 15 (non_end_instruction -> if_statement .)
    BREAK           reduce using rule 15 (non_end_instruction -> if_statement .)
    ;               reduce using rule 15 (non_end_instruction -> if_statement .)
    WHILE           reduce using rule 15 (non_end_instruction -> if_statement .)
    FOR             reduce using rule 15 (non_end_instruction -> if_statement .)
    IF              reduce using rule 15 (non_end_instruction -> if_statement .)
    PRINT           reduce using rule 15 (non_end_instruction -> if_statement .)
    ID              reduce using rule 15 (non_end_instruction -> if_statement .)
    $end            reduce using rule 15 (non_end_instruction -> if_statement .)
    }               reduce using rule 15 (non_end_instruction -> if_statement .)
    ELSE            reduce using rule 15 (non_end_instruction -> if_statement .)


state 10

    (7) end_line_instruction -> RETURN . expression ;
    (47) expression -> . factor
    (48) expression -> . expression_bin
    (49) expression -> . MINUS expression_negate
    (21) factor -> . expression_transpose TRANSPOSE
    (22) factor -> . matrix_function
    (23) factor -> . [ value_list ]
    (24) factor -> . ( expression )
    (25) factor -> . STRING
    (26) factor -> . ID
    (27) factor -> . NUMBER
    (28) expression_bin -> . expression NEQ expression
    (29) expression_bin -> . expression EQ expression
    (30) expression_bin -> . expression LE expression
    (31) expression_bin -> . expression GE expression
    (32) expression_bin -> . expression LT expression
    (33) expression_bin -> . expression GT expression
    (34) expression_bin -> . expression DOTDIV expression
    (35) expression_bin -> . expression DOTMUL expression
    (36) expression_bin -> . expression DIVIDE expression
    (37) expression_bin -> . expression TIMES expression
    (38) expression_bin -> . expression DOTSUB expression
    (39) expression_bin -> . expression DOTADD expression
    (40) expression_bin -> . expression MINUS expression
    (41) expression_bin -> . expression PLUS expression
    (43) expression_transpose -> . factor
    (44) matrix_function -> . EYE ( expression )
    (45) matrix_function -> . ONES ( expression )
    (46) matrix_function -> . ZEROS ( expression )
    (57) NUMBER -> . FLOATNUM
    (58) NUMBER -> . INTNUM
    MINUS           shift and go to state 26
    [               shift and go to state 29
    (               shift and go to state 30
    STRING          shift and go to state 31
    ID              shift and go to state 32
    EYE             shift and go to state 34
    ONES            shift and go to state 35
    ZEROS           shift and go to state 36
    FLOATNUM        shift and go to state 37
    INTNUM          shift and go to state 38

    expression                     shift and go to state 23
    factor                         shift and go to state 24
    expression_bin                 shift and go to state 25
    expression_transpose           shift and go to state 27
    matrix_function                shift and go to state 28
    NUMBER                         shift and go to state 33

state 11

    (12) end_line_instruction -> ; .
    {               reduce using rule 12 (end_line_instruction -> ; .)
    RETURN          reduce using rule 12 (end_line_instruction -> ; .)
    CONTINUE        reduce using rule 12 (end_line_instruction -> ; .)
    BREAK           reduce using rule 12 (end_line_instruction -> ; .)
    ;               reduce using rule 12 (end_line_instruction -> ; .)
    WHILE           reduce using rule 12 (end_line_instruction -> ; .)
    FOR             reduce using rule 12 (end_line_instruction -> ; .)
    IF              reduce using rule 12 (end_line_instruction -> ; .)
    PRINT           reduce using rule 12 (end_line_instruction -> ; .)
    ID              reduce using rule 12 (end_line_instruction -> ; .)
    $end            reduce using rule 12 (end_line_instruction -> ; .)
    }               reduce using rule 12 (end_line_instruction -> ; .)
    ELSE            reduce using rule 12 (end_line_instruction -> ; .)


state 12

    (8) end_line_instruction -> print_stmt .
    {               reduce using rule 8 (end_line_instruction -> print_stmt .)
    RETURN          reduce using rule 8 (end_line_instruction -> print_stmt .)
    CONTINUE        reduce using rule 8 (end_line_instruction -> print_stmt .)
    BREAK           reduce using rule 8 (end_line_instruction -> print_stmt .)
    ;               reduce using rule 8 (end_line_instruction -> print_stmt .)
    WHILE           reduce using rule 8 (end_line_instruction -> print_stmt .)
    FOR             reduce using rule 8 (end_line_instruction -> print_stmt .)
    IF              reduce using rule 8 (end_line_instruction -> print_stmt .)
    PRINT           reduce using rule 8 (end_line_instruction -> print_stmt .)
    ID              reduce using rule 8 (end_line_instruction -> print_stmt .)
    $end            reduce using rule 8 (end_line_instruction -> print_stmt .)
    }               reduce using rule 8 (end_line_instruction -> print_stmt .)
    ELSE            reduce using rule 8 (end_line_instruction -> print_stmt .)


state 13

    (9) end_line_instruction -> CONTINUE . ;
    ;               shift and go to state 39


state 14

    (10) end_line_instruction -> BREAK . ;
    ;               shift and go to state 40


state 15

    (11) end_line_instruction -> assignment .
    {               reduce using rule 11 (end_line_instruction -> assignment .)
    RETURN          reduce using rule 11 (end_line_instruction -> assignment .)
    CONTINUE        reduce using rule 11 (end_line_instruction -> assignment .)
    BREAK           reduce using rule 11 (end_line_instruction -> assignment .)
    ;               reduce using rule 11 (end_line_instruction -> assignment .)
    WHILE           reduce using rule 11 (end_line_instruction -> assignment .)
    FOR             reduce using rule 11 (end_line_instruction -> assignment .)
    IF              reduce using rule 11 (end_line_instruction -> assignment .)
    PRINT           reduce using rule 11 (end_line_instruction -> assignment .)
    ID              reduce using rule 11 (end_line_instruction -> assignment .)
    $end            reduce using rule 11 (end_line_instruction -> assignment .)
    }               reduce using rule 11 (end_line_instruction -> assignment .)
    ELSE            reduce using rule 11 (end_line_instruction -> assignment .)


state 16

    (55) while_loop -> WHILE . ( expression ) instruction
    (               shift and go to state 41


state 17

    (54) for_loop -> FOR . ID ASSIGN expression RANGE expression instruction
    ID              shift and go to state 42


state 18

    (16) assignment -> ID . DIVASSIGN expression ;
    (17) assignment -> ID . MULASSIGN expression ;
    (18) assignment -> ID . SUBASSIGN expression ;
    (19) assignment -> ID . ADDASSIGN expression ;
    (20) assignment -> ID . ASSIGN expression ;
    DIVASSIGN       shift and go to state 43
    MULASSIGN       shift and go to state 44
    SUBASSIGN       shift and go to state 45
    ADDASSIGN       shift and go to state 46
    ASSIGN          shift and go to state 47


state 19

    (52) if_statement -> IF . ( expression ) instruction ELSE
    (53) if_statement -> IF . ( expression ) instruction
    (               shift and go to state 48


state 20

    (56) print_stmt -> PRINT . value_list ;
    (50) value_list -> . expression
    (51) value_list -> . value_list , expression
    (47) expression -> . factor
    (48) expression -> . expression_bin
    (49) expression -> . MINUS expression_negate
    (21) factor -> . expression_transpose TRANSPOSE
    (22) factor -> . matrix_function
    (23) factor -> . [ value_list ]
    (24) factor -> . ( expression )
    (25) factor -> . STRING
    (26) factor -> . ID
    (27) factor -> . NUMBER
    (28) expression_bin -> . expression NEQ expression
    (29) expression_bin -> . expression EQ expression
    (30) expression_bin -> . expression LE expression
    (31) expression_bin -> . expression GE expression
    (32) expression_bin -> . expression LT expression
    (33) expression_bin -> . expression GT expression
    (34) expression_bin -> . expression DOTDIV expression
    (35) expression_bin -> . expression DOTMUL expression
    (36) expression_bin -> . expression DIVIDE expression
    (37) expression_bin -> . expression TIMES expression
    (38) expression_bin -> . expression DOTSUB expression
    (39) expression_bin -> . expression DOTADD expression
    (40) expression_bin -> . expression MINUS expression
    (41) expression_bin -> . expression PLUS expression
    (43) expression_transpose -> . factor
    (44) matrix_function -> . EYE ( expression )
    (45) matrix_function -> . ONES ( expression )
    (46) matrix_function -> . ZEROS ( expression )
    (57) NUMBER -> . FLOATNUM
    (58) NUMBER -> . INTNUM
    MINUS           shift and go to state 26
    [               shift and go to state 29
    (               shift and go to state 30
    STRING          shift and go to state 31
    ID              shift and go to state 32
    EYE             shift and go to state 34
    ONES            shift and go to state 35
    ZEROS           shift and go to state 36
    FLOATNUM        shift and go to state 37
    INTNUM          shift and go to state 38

    value_list                     shift and go to state 49
    expression                     shift and go to state 50
    factor                         shift and go to state 24
    expression_bin                 shift and go to state 25
    expression_transpose           shift and go to state 27
    matrix_function                shift and go to state 28
    NUMBER                         shift and go to state 33

state 21

    (2) instructions -> instructions instruction .
    {               reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    ;               reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)


state 22

    (4) instruction -> { instructions . }
    (2) instructions -> instructions . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . non_end_instruction
    (6) instruction -> . end_line_instruction
    (13) non_end_instruction -> . while_loop
    (14) non_end_instruction -> . for_loop
    (15) non_end_instruction -> . if_statement
    (7) end_line_instruction -> . RETURN expression ;
    (8) end_line_instruction -> . print_stmt
    (9) end_line_instruction -> . CONTINUE ;
    (10) end_line_instruction -> . BREAK ;
    (11) end_line_instruction -> . assignment
    (12) end_line_instruction -> . ;
    (55) while_loop -> . WHILE ( expression ) instruction
    (54) for_loop -> . FOR ID ASSIGN expression RANGE expression instruction
    (52) if_statement -> . IF ( expression ) instruction ELSE
    (53) if_statement -> . IF ( expression ) instruction
    (56) print_stmt -> . PRINT value_list ;
    (16) assignment -> . ID DIVASSIGN expression ;
    (17) assignment -> . ID MULASSIGN expression ;
    (18) assignment -> . ID SUBASSIGN expression ;
    (19) assignment -> . ID ADDASSIGN expression ;
    (20) assignment -> . ID ASSIGN expression ;
    }               shift and go to state 51
    {               shift and go to state 4
    RETURN          shift and go to state 10
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ;               shift and go to state 11
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    IF              shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 21
    non_end_instruction            shift and go to state 5
    end_line_instruction           shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8
    if_statement                   shift and go to state 9
    print_stmt                     shift and go to state 12
    assignment                     shift and go to state 15

state 23

    (7) end_line_instruction -> RETURN expression . ;
    (28) expression_bin -> expression . NEQ expression
    (29) expression_bin -> expression . EQ expression
    (30) expression_bin -> expression . LE expression
    (31) expression_bin -> expression . GE expression
    (32) expression_bin -> expression . LT expression
    (33) expression_bin -> expression . GT expression
    (34) expression_bin -> expression . DOTDIV expression
    (35) expression_bin -> expression . DOTMUL expression
    (36) expression_bin -> expression . DIVIDE expression
    (37) expression_bin -> expression . TIMES expression
    (38) expression_bin -> expression . DOTSUB expression
    (39) expression_bin -> expression . DOTADD expression
    (40) expression_bin -> expression . MINUS expression
    (41) expression_bin -> expression . PLUS expression
    ;               shift and go to state 52
    NEQ             shift and go to state 53
    EQ              shift and go to state 54
    LE              shift and go to state 55
    GE              shift and go to state 56
    LT              shift and go to state 57
    GT              shift and go to state 58
    DOTDIV          shift and go to state 59
    DOTMUL          shift and go to state 60
    DIVIDE          shift and go to state 61
    TIMES           shift and go to state 62
    DOTSUB          shift and go to state 63
    DOTADD          shift and go to state 64
    MINUS           shift and go to state 65
    PLUS            shift and go to state 66


state 24

    (47) expression -> factor .
    (43) expression_transpose -> factor .
    ;               reduce using rule 47 (expression -> factor .)
    NEQ             reduce using rule 47 (expression -> factor .)
    EQ              reduce using rule 47 (expression -> factor .)
    LE              reduce using rule 47 (expression -> factor .)
    GE              reduce using rule 47 (expression -> factor .)
    LT              reduce using rule 47 (expression -> factor .)
    GT              reduce using rule 47 (expression -> factor .)
    DOTDIV          reduce using rule 47 (expression -> factor .)
    DOTMUL          reduce using rule 47 (expression -> factor .)
    DIVIDE          reduce using rule 47 (expression -> factor .)
    TIMES           reduce using rule 47 (expression -> factor .)
    DOTSUB          reduce using rule 47 (expression -> factor .)
    DOTADD          reduce using rule 47 (expression -> factor .)
    MINUS           reduce using rule 47 (expression -> factor .)
    PLUS            reduce using rule 47 (expression -> factor .)
    ,               reduce using rule 47 (expression -> factor .)
    ]               reduce using rule 47 (expression -> factor .)
    )               reduce using rule 47 (expression -> factor .)
    RANGE           reduce using rule 47 (expression -> factor .)
    {               reduce using rule 47 (expression -> factor .)
    RETURN          reduce using rule 47 (expression -> factor .)
    CONTINUE        reduce using rule 47 (expression -> factor .)
    BREAK           reduce using rule 47 (expression -> factor .)
    WHILE           reduce using rule 47 (expression -> factor .)
    FOR             reduce using rule 47 (expression -> factor .)
    IF              reduce using rule 47 (expression -> factor .)
    PRINT           reduce using rule 47 (expression -> factor .)
    ID              reduce using rule 47 (expression -> factor .)
    TRANSPOSE       reduce using rule 43 (expression_transpose -> factor .)


state 25

    (48) expression -> expression_bin .
    ;               reduce using rule 48 (expression -> expression_bin .)
    NEQ             reduce using rule 48 (expression -> expression_bin .)
    EQ              reduce using rule 48 (expression -> expression_bin .)
    LE              reduce using rule 48 (expression -> expression_bin .)
    GE              reduce using rule 48 (expression -> expression_bin .)
    LT              reduce using rule 48 (expression -> expression_bin .)
    GT              reduce using rule 48 (expression -> expression_bin .)
    DOTDIV          reduce using rule 48 (expression -> expression_bin .)
    DOTMUL          reduce using rule 48 (expression -> expression_bin .)
    DIVIDE          reduce using rule 48 (expression -> expression_bin .)
    TIMES           reduce using rule 48 (expression -> expression_bin .)
    DOTSUB          reduce using rule 48 (expression -> expression_bin .)
    DOTADD          reduce using rule 48 (expression -> expression_bin .)
    MINUS           reduce using rule 48 (expression -> expression_bin .)
    PLUS            reduce using rule 48 (expression -> expression_bin .)
    ,               reduce using rule 48 (expression -> expression_bin .)
    ]               reduce using rule 48 (expression -> expression_bin .)
    )               reduce using rule 48 (expression -> expression_bin .)
    RANGE           reduce using rule 48 (expression -> expression_bin .)
    {               reduce using rule 48 (expression -> expression_bin .)
    RETURN          reduce using rule 48 (expression -> expression_bin .)
    CONTINUE        reduce using rule 48 (expression -> expression_bin .)
    BREAK           reduce using rule 48 (expression -> expression_bin .)
    WHILE           reduce using rule 48 (expression -> expression_bin .)
    FOR             reduce using rule 48 (expression -> expression_bin .)
    IF              reduce using rule 48 (expression -> expression_bin .)
    PRINT           reduce using rule 48 (expression -> expression_bin .)
    ID              reduce using rule 48 (expression -> expression_bin .)


state 26

    (49) expression -> MINUS . expression_negate
    (42) expression_negate -> . expression
    (47) expression -> . factor
    (48) expression -> . expression_bin
    (49) expression -> . MINUS expression_negate
    (21) factor -> . expression_transpose TRANSPOSE
    (22) factor -> . matrix_function
    (23) factor -> . [ value_list ]
    (24) factor -> . ( expression )
    (25) factor -> . STRING
    (26) factor -> . ID
    (27) factor -> . NUMBER
    (28) expression_bin -> . expression NEQ expression
    (29) expression_bin -> . expression EQ expression
    (30) expression_bin -> . expression LE expression
    (31) expression_bin -> . expression GE expression
    (32) expression_bin -> . expression LT expression
    (33) expression_bin -> . expression GT expression
    (34) expression_bin -> . expression DOTDIV expression
    (35) expression_bin -> . expression DOTMUL expression
    (36) expression_bin -> . expression DIVIDE expression
    (37) expression_bin -> . expression TIMES expression
    (38) expression_bin -> . expression DOTSUB expression
    (39) expression_bin -> . expression DOTADD expression
    (40) expression_bin -> . expression MINUS expression
    (41) expression_bin -> . expression PLUS expression
    (43) expression_transpose -> . factor
    (44) matrix_function -> . EYE ( expression )
    (45) matrix_function -> . ONES ( expression )
    (46) matrix_function -> . ZEROS ( expression )
    (57) NUMBER -> . FLOATNUM
    (58) NUMBER -> . INTNUM
    MINUS           shift and go to state 26
    [               shift and go to state 29
    (               shift and go to state 30
    STRING          shift and go to state 31
    ID              shift and go to state 32
    EYE             shift and go to state 34
    ONES            shift and go to state 35
    ZEROS           shift and go to state 36
    FLOATNUM        shift and go to state 37
    INTNUM          shift and go to state 38
